# autolabmate

./: .env.default  .gitignore  Dockerfile  Makefile  README.md  app-generate-input.py  app.py  cloudrun-prod.yaml  cloudrun-staging.yaml  config.py  docker-compose.yaml  install.R  install_packages.R  installed_packages_with_versions.txt  main.py  packages.txt  pyproject.toml  requirements.txt  session_state.py  utils.py  write_utils.py
R/: experiment_helpers.R  file_ops.R  propose.R  update.R
auth/: authenticate.py
auto_csv_generator/: README.md  app.py  csv_generator.py  csv_handler.py  parameter_handler.py  requirements.txt  utils.py  value_generator.py
components/: authenticate.py
db/: connectors.py  database.py
db/crud/: data.py  table.py
dependencies/: authentication.py  navigation.py
pages/: clean.py  dashboard.py  dashboard_3.py  generate.py  generate_1.py  logout.py  logout_6.py  propose.py  propose_4.py  update.py  update_5.py  upload.py  upload_2.py
tests/: test_app.py  test_authentication.py  test_csv_generator.py  test_generate.py
utils/: dashboard.py  dataframe.py  file.py  input.py  io.py  ml.py  reports.py  rpy2_utils.py
